--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "webpack": "^5.103.0"
   },
   "devDependencies": {
+    "@types/react": "19.2.7",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.19"
+    "tailwindcss": "^3.4.19",
+    "typescript": "5.9.3"
   }
 }
