--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,12 +31,19 @@ jobs:
         run: npm ci
         working-directory: frontend
 
-      - name: Install Playwright browsers
+      - name: Cache Playwright browsers
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-browsers-${{ hashFiles('frontend/package-lock.json') }}
+
+      - name: Install Playwright browsers (if not cached)
         run: npx playwright install --with-deps
         working-directory: frontend
 
       - name: Run Playwright tests for matrix browser
-        run: npx playwright test --project=${{ matrix.browser }} --reporter=github
+        run: npx playwright test --project=${{ matrix.browser }} --reporter=github,html
         working-directory: frontend
 
       - name: Upload Playwright report
