ci(deploy): add Render deploy workflow and remove plaintext secret from render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,6 @@ services:
       - key: EMAIL_HOST_USER
         value: k11softwaresolutions@outlook.com
       - key: EMAIL_HOST_PASSWORD
-        value: ztmoiazxkilfggra
+        fromSecret: RENDER_EMAIL_PASSWORD
 
 
