--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "typescript": "5.9.3",
-    "@playwright/test": "1.40.0",
-    "playwright": "1.40.0"
+    "@playwright/test": "^1.57.0",
+    "playwright": "^1.57.0"
   }
 }
